--- a/package.json
+++ b/package.json
@@ -6,28 +6,47 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "generate:api": "orval --config ./orval.config.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.53.0",
+    "@tanstack/react-query": "^5.84.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.11.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "rc-slider": "^11.1.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
+    "msw": "^2.10.4",
+    "orval": "^7.11.2",
     "postcss": "^8.5.6",
+    "swagger-typescript-api": "^13.2.0",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.2"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
