--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
     "nuqs": "^2.4.3",
     "rc-slider": "^11.1.8",
@@ -37,6 +38,7 @@
     "@faker-js/faker": "^9.9.0",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
+    "canvas": "^3.1.2",
     "msw": "^2.10.4",
     "orval": "^7.11.2",
     "postcss": "^8.5.6",
