--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,16 @@ VITE_SUPABASE_ANON_KEY=
 
 # WebSocket Server URL
 VITE_SOCKET_URL=
+
+# Firebase (FCM용)
+VITE_FIREBASE_API_KEY=your-firebase-api-key
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+VITE_FIREBASE_APP_ID=your-app-id
+VITE_FIREBASE_MEASUREMENT_ID=your-measurement-id
+VITE_FIREBASE_VAPID_KEY=your-vapid-key
+
+# API
+VITE_API_BASE_URL=http://localhost:3001
